[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://UI/Layouts/ScrollableLogShell.gd" id="1"]

[node name="ScrollableLogShell" type="PanelContainer"]
anchors_preset = 15
anchor_bottom = 1.0
anchor_right = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1")

[node name="Layout" type="VBoxContainer" parent="."]
anchors_preset = 15
anchor_bottom = 1.0
anchor_right = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HeaderSlot" type="VBoxContainer" parent="Layout"]
size_flags_horizontal = 3

[node name="BodySlot" type="VBoxContainer" parent="Layout"]
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="LogViewContainer" type="MarginContainer" parent="Layout/BodySlot"]
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="LogView" type="RichTextLabel" parent="Layout/BodySlot/LogViewContainer"]
size_flags_horizontal = 3
size_flags_vertical = 3
text = ""

[node name="FooterSlot" type="HBoxContainer" parent="Layout"]
size_flags_horizontal = 3
alignment = 2

